--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,87 @@
-<p>header works!</p>
+<header>
+    <div class="container">
+        <div class="main-header-wrap flex">
+            <div class="logo-wrap">
+                <a href="/">
+                <img src="../../assets/image/CD_LOGO.png" alt="">
+                </a>
+            </div>
+            <div id="toggle">
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+              </div>
+            <div class="menu-wrap flex">
+                <ul class="flex menu-ul">
+                    <li>
+                        <a href="/">About</a>
+                    </li>
+                    <li class="dropdown relative">
+                        <a href="/">Service</a>
+                        <div class="dropdown-wrap">
+                            <ul class="drop-menu">
+                                <li class="drop-list">
+                                    <a href="/">ux/ui design</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">shopify development</a>
+                                </li>
+                                <li class="drop-list">
+                                    <a href="/">data migration</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="/">Protfolio</a>
+                    </li>
+                    <li>
+                        <a href="/">blogs</a>
+                    </li>
+                </ul>
+                <div class="bnt-wrap">
+                    <a class="cdk-btn-green" href="/">Get a quote</a>
+                </div>
+            </div>
+        </div>
+        <div class="menu-wrap-mobile" id="menu">
+            <ul class="menu-ul-mobile">
+                <li>
+                    <a href="/">About</a>
+                </li>
+                <li class="dm-service">
+                    <div class="flex">
+                        <a href="/">Service</a><span class="tab-heading"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
+                            <path d="M7.83105 9.84547C8.48183 10.4963 9.53871 10.4963 10.1895 9.84547L16.8536 3.1814C17.3325 2.70242 17.4731 1.98916 17.2128 1.3644C16.9525 0.739649 16.3486 0.333557 15.6717 0.333557L2.34361 0.333557C1.67199 0.333557 1.06286 0.739649 0.802542 1.3644C0.542227 1.98916 0.688004 2.70242 1.16178 3.1814L7.82584 9.84547H7.83105Z" fill="white"/>
+                            </svg></span>
+                    </div>
+                        <div class="tabcontent">
+                            <ul class="">
+                                <li class="">
+                                    <a href="/">ux/ui design</a>
+                                </li>
+                                <li class="">
+                                    <a href="/">shopify development</a>
+                                </li>
+                                <li class="">
+                                    <a href="/">data migration</a>
+                                </li>
+                            </ul>
+                        </div>
+                </li>
+                <li>
+                    <a href="/">Protfolio</a>
+                </li>
+                <li>
+                    <a href="/">blogs</a>
+                </li>
+                <li>
+                    <a href="/">team</a>
+                </li>
+                <li>
+                    <a href="/">contact us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
