--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,149 @@
-
+<footer>
+    <div class="">
+        <div class="footer-all-wrapper">
+            <div class="footer_newsletter_wrap flex">
+                <div class="newsletter_text">
+                    <h3 class="text">Subscribe Newsletter</h3>
+                </div>
+                <div class="newsletter_input_wrap">
+                    <form action="" class="flex">
+                        <input type="email" name="" id="" placeholder="Enter your email">
+                        <button class="cdk-btn-green">Subcribe Now</button>
+                    </form>
+                </div>
+            </div>
+            <div class="desktop footer_menu_icon_wrap flex container">
+                <div class="footer-menu">
+                    <ul class="menu-wrap flex">
+                        <li class="menu-list">
+                            <a href="#">About us</a>
+                        </li>
+                        <li class="menu-list">
+                            <a href="#">Our Team</a>
+                        </li>
+                        <li class="menu-list">
+                            <a href="#">Career</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-icon">
+                    <ul class="icon_wrap flex">
+                        <li class="icon-list">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M12.8192 24H1.32462C0.592836 24 0 23.4068 0 22.6753V1.32461C0 0.592925 0.592929 0 1.32462 0H22.6755C23.407 0 24 0.592925 24 1.32461V22.6753C24 23.4069 23.4069 24 22.6755 24H16.5597V14.7059H19.6793L20.1464 11.0838H16.5597V8.77132C16.5597 7.72264 16.8509 7.00801 18.3546 7.00801L20.2727 7.00717V3.76755C19.9409 3.7234 18.8024 3.62478 17.4778 3.62478C14.7124 3.62478 12.8192 5.31276 12.8192 8.4126V11.0838H9.69156V14.7059H12.8192V24Z" fill="white"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="icon-list">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20" fill="none">
+                                    <path d="M24 2.36764C23.1182 2.76923 22.1687 3.04081 21.1727 3.16215C22.1898 2.5381 22.9702 1.54857 23.3379 0.369808C22.3856 0.947635 21.3333 1.368 20.2092 1.59335C19.3133 0.612495 18.0328 0 16.6156 0C13.8982 0 11.6936 2.26074 11.6936 5.04875C11.6936 5.44457 11.7359 5.82882 11.8204 6.19863C7.72812 5.98772 4.10072 3.97978 1.67072 0.921633C1.2467 1.66992 1.0044 2.5381 1.0044 3.46262C1.0044 5.21343 1.87357 6.75912 3.19493 7.66486C2.38915 7.6403 1.62846 7.41062 0.96355 7.03503V7.09715C0.96355 9.54424 2.66103 11.5854 4.91495 12.0477C4.5022 12.1661 4.06691 12.2254 3.61754 12.2254C3.30058 12.2254 2.99067 12.195 2.69061 12.1358C3.31749 14.1408 5.13471 15.6013 7.29002 15.6403C5.60521 16.9953 3.48089 17.8028 1.17485 17.8028C0.777601 17.8028 0.384575 17.7797 0 17.7335C2.17926 19.1636 4.76845 20 7.54781 20C16.6057 20 21.5573 12.3077 21.5573 5.63525C21.5573 5.41567 21.5531 5.1961 21.5446 4.98086C22.5068 4.26869 23.3421 3.38028 24 2.36764Z" fill="white"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="icon-list">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="21" viewBox="0 0 24 21" fill="none">
+                                    <path d="M23.9879 4.85527C23.8835 7.22196 22.2494 10.4572 19.0969 14.5624C15.8344 18.8551 13.07 21 10.8107 21C9.4137 21 8.22975 19.695 7.26312 17.0765C6.61541 14.674 5.97193 12.2716 5.32563 9.87626C4.60595 7.2563 3.83547 5.94703 3.01137 5.94703C2.83215 5.94703 2.20702 6.32908 1.12891 7.09461L0 5.61936C1.18253 4.56766 2.34813 3.51166 3.49821 2.45852C5.07304 1.07628 6.25698 0.350823 7.04722 0.274986C8.90992 0.0918324 10.0586 1.38393 10.4918 4.14698C10.9532 7.13038 11.2778 8.98482 11.457 9.71171C11.9961 12.1843 12.5859 13.4177 13.2322 13.4177C13.7332 13.4177 14.4867 12.6193 15.4915 11.021C16.4962 9.41981 17.031 8.20355 17.1044 7.36505C17.2483 5.98281 16.7107 5.29598 15.4915 5.29598C14.9171 5.29598 14.3245 5.41904 13.7163 5.6766C14.9016 1.78601 17.1594 -0.105631 20.4954 0.00454819C22.9663 0.0746616 24.1333 1.69443 23.9879 4.85527Z" fill="white"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="icon-list">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17" fill="none">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M22.806 1.26818C23.5252 2.0016 23.76 3.66708 23.76 3.66708C23.76 3.66708 24 5.62336 24 7.57889V9.4128C24 11.3691 23.76 13.3246 23.76 13.3246C23.76 13.3246 23.5252 14.9901 22.806 15.7235C21.9837 16.5911 21.0719 16.6808 20.5565 16.7314C20.4998 16.737 20.4479 16.7421 20.4015 16.7477C17.043 16.9924 12 17 12 17C12 17 5.76 16.9426 3.84 16.7568C3.74903 16.7397 3.63876 16.7264 3.51388 16.7113C2.9057 16.6378 1.95113 16.5225 1.19325 15.7235C0.474 14.9901 0.24 13.3246 0.24 13.3246C0.24 13.3246 0 11.3691 0 9.4128V7.57889C0 5.62336 0.24 3.66708 0.24 3.66708C0.24 3.66708 0.474 2.0016 1.19325 1.26818C2.0174 0.399349 2.93006 0.310675 3.44548 0.260597C3.50136 0.255167 3.55258 0.250191 3.5985 0.244724C6.957 0 11.9948 0 11.9948 0H12.0052C12.0052 0 17.043 0 20.4015 0.244724C20.4474 0.250199 20.4987 0.255182 20.5546 0.260621C21.0696 0.310704 21.9827 0.39949 22.806 1.26818ZM9.52125 4.84387L9.522 11.635L16.0057 8.25112L9.52125 4.84387Z" fill="white"/>
+                                    </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="desktop container flex footer_last_menu space-between">
+                <div class="footer_copy_wrap">
+                    <p class="copy_text">© Codesdesk Technology Pvt. Ltd. 2022 | 
+                        All Rights Reserved.</p>
+                </div>
+                <div class="footer_logo_wrap">
+                    <img src="../../assets/image/CD_LOGO.png" alt="logo">
+                </div>
+                <div class="footer_term_menu">
+                    <ul class="term_menu flex">
+                        <li class="term_list">
+                            <a href="#">Terms of Service</a>
+                        </li>
+                        <li class="term_list">
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mobile">
+                <div class="container footer_mobile">
+                    <div class="footer_logo_wrap">
+                        <img src="../../assets/image/CD_LOGO.png" alt="logo">
+                    </div>
+                    <div class="footer-icon">
+                        <ul class="icon_wrap flex">
+                            <li class="icon-list">
+                                <a href="#">
+                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M10.6826 20H1.10385C0.49403 20 0 19.5057 0 18.8961V1.10384C0 0.494104 0.494108 0 1.10385 0H18.8962C19.5058 0 20 0.494104 20 1.10384V18.8961C20 19.5057 19.5057 20 18.8962 20H13.7997V12.2549H16.3994L16.7886 9.23649H13.7997V7.30943C13.7997 6.43554 14.0424 5.84 15.2955 5.84L16.8939 5.83931V3.13962C16.6175 3.10284 15.6687 3.02065 14.5648 3.02065C12.2603 3.02065 10.6826 4.4273 10.6826 7.0105V9.23649H8.0763V12.2549H10.6826V20Z" fill="white"/>
+                                        </svg>
+                                </a>
+                            </li>
+                            <li class="icon-list">
+                                <a href="#">
+                                    <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M20.2563 2.36764C19.5215 2.76923 18.7303 3.04081 17.9003 3.16215C18.7479 2.5381 19.3982 1.54857 19.7046 0.369808C18.911 0.947635 18.0341 1.368 17.0973 1.59335C16.3507 0.612495 15.2836 0 14.1027 0C11.8382 0 10.001 2.26074 10.001 5.04875C10.001 5.44457 10.0362 5.82882 10.1067 6.19863C6.69645 5.98772 3.67362 3.97978 1.64861 0.921633C1.29526 1.66992 1.09335 2.5381 1.09335 3.46262C1.09335 5.21343 1.81766 6.75912 2.91879 7.66486C2.24731 7.6403 1.61339 7.41062 1.05931 7.03503V7.09715C1.05931 9.54424 2.47387 11.5854 4.35214 12.0477C4.00818 12.1661 3.64544 12.2254 3.27096 12.2254C3.00683 12.2254 2.74857 12.195 2.49853 12.1358C3.02092 14.1408 4.53527 15.6013 6.33136 15.6403C4.92736 16.9953 3.15709 17.8028 1.23539 17.8028C0.904349 17.8028 0.576826 17.7797 0.256348 17.7335C2.0724 19.1636 4.23005 20 6.54619 20C14.0945 20 18.2208 12.3077 18.2208 5.63525C18.2208 5.41567 18.2173 5.1961 18.2102 4.98086C19.012 4.26869 19.7081 3.38028 20.2563 2.36764Z" fill="white"/>
+                                        </svg>
+                                </a>
+                            </li>
+                            <li class="icon-list">
+                                <a href="#">
+                                    <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M20.2463 4.62406C20.1593 6.87806 18.7975 9.95924 16.1705 13.869C13.4517 17.9572 11.148 20 9.26528 20C8.1011 20 7.11448 18.7572 6.30895 16.2633C5.76919 13.9753 5.23296 11.6872 4.69437 9.40596C4.09464 6.91076 3.45257 5.66384 2.76582 5.66384C2.61648 5.66384 2.09553 6.0277 1.19711 6.75677L0.256348 5.35177C1.24179 4.35015 2.21312 3.34444 3.17152 2.34145C4.48388 1.02503 5.4705 0.334117 6.12903 0.261892C7.68128 0.0874594 8.6385 1.31802 8.99952 3.9495C9.38406 6.79084 9.65452 8.55697 9.80387 9.24924C10.2531 11.6041 10.7446 12.7788 11.2832 12.7788C11.7007 12.7788 12.3286 12.0184 13.1659 10.4962C14.0032 8.97124 14.4489 7.8129 14.51 7.01433C14.63 5.69791 14.1819 5.04379 13.1659 5.04379C12.6873 5.04379 12.1934 5.16099 11.6866 5.40628C12.6744 1.70096 14.5559 -0.100601 17.3358 0.00433161C19.3949 0.0711062 20.3674 1.61374 20.2463 4.62406Z" fill="white"/>
+                                        </svg>
+                                </a>
+                            </li>
+                            <li class="icon-list">
+                                <a href="#">
+                                    <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.2613 1.49198C19.8607 2.35482 20.0563 4.31421 20.0563 4.31421C20.0563 4.31421 20.2563 6.61572 20.2563 8.91634V11.0739C20.2563 13.3754 20.0563 15.676 20.0563 15.676C20.0563 15.676 19.8607 17.6354 19.2613 18.4982C18.5761 19.519 17.8163 19.6244 17.3868 19.684C17.3395 19.6906 17.2963 19.6966 17.2576 19.7032C14.4588 19.9911 10.2563 20 10.2563 20C10.2563 20 5.05635 19.9325 3.45635 19.7139C3.38054 19.6937 3.28865 19.6781 3.18458 19.6603C2.67777 19.5739 1.88229 19.4382 1.25072 18.4982C0.651348 17.6354 0.456348 15.676 0.456348 15.676C0.456348 15.676 0.256348 13.3754 0.256348 11.0739V8.91634C0.256348 6.61572 0.456348 4.31421 0.456348 4.31421C0.456348 4.31421 0.651348 2.35482 1.25072 1.49198C1.93751 0.469822 2.69806 0.3655 3.12758 0.306584C3.17415 0.300197 3.21683 0.294343 3.2551 0.287911C6.05385 0 10.252 0 10.252 0H10.2607C10.2607 0 14.4588 0 17.2576 0.287911C17.2959 0.294352 17.3386 0.300214 17.3852 0.306613C17.8144 0.365534 18.5752 0.469988 19.2613 1.49198ZM8.19067 5.69828L8.1913 13.6878L13.5944 9.70681L8.19067 5.69828Z" fill="white"/>
+                                        </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer_mobile_menu_wrap">
+                    <ul class="footer-mobile-menu">
+                        <li class="mobile-list">
+                            <a href="#">About us</a>
+                        </li>
+                        <li class="mobile-list">
+                            <a href="#">Our team</a>
+                        </li>
+                        <li class="mobile-list">
+                            <a href="#">Career</a>
+                        </li>
+                        <li class="mobile-list">
+                            <a href="#">Blogs</a>
+                        </li>
+                    </ul>
+                    <ul class="footer-mobile-menu-second">
+                        <li class="mobile-list">
+                            <a href="#">Terms of Service</a>
+                        </li>
+                        <li class="mobile-list">
+                            <a href="#">Privacy & Policy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mobile_copy_text">
+                    <p>© Codesdesk Technology Pvt. Ltd. 2022 | All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
