--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="">
+    <div class="footer_main_wrap">
         <div class="footer-all-wrapper">
             <div class="footer_newsletter_wrap flex">
                 <div class="newsletter_text">
@@ -116,34 +116,35 @@
                         </ul>
                     </div>
                 </div>
-                <div class="footer_mobile_menu_wrap">
-                    <ul class="footer-mobile-menu">
-                        <li class="mobile-list">
-                            <a href="#">About us</a>
-                        </li>
-                        <li class="mobile-list">
-                            <a href="#">Our team</a>
-                        </li>
-                        <li class="mobile-list">
-                            <a href="#">Career</a>
-                        </li>
-                        <li class="mobile-list">
-                            <a href="#">Blogs</a>
-                        </li>
-                    </ul>
-                    <ul class="footer-mobile-menu-second">
-                        <li class="mobile-list">
-                            <a href="#">Terms of Service</a>
-                        </li>
-                        <li class="mobile-list">
-                            <a href="#">Privacy & Policy</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="mobile_copy_text">
-                    <p>© Codesdesk Technology Pvt. Ltd. 2022 | All Rights Reserved.</p>
-                </div>
+                
             </div>
+        </div>
+        <div class="footer_mobile_menu_wrap mobile">
+            <ul class="footer-mobile-menu">
+                <li class="mobile-list">
+                    <a href="#">About us</a>
+                </li>
+                <li class="mobile-list">
+                    <a href="#">Our team</a>
+                </li>
+                <li class="mobile-list">
+                    <a href="#">Career</a>
+                </li>
+                <li class="mobile-list">
+                    <a href="#">Blogs</a>
+                </li>
+            </ul>
+            <ul class="footer-mobile-menu-second">
+                <li class="mobile-list">
+                    <a href="#">Terms of Service</a>
+                </li>
+                <li class="mobile-list">
+                    <a href="#">Privacy & Policy</a>
+                </li>
+            </ul>
+        </div>
+        <div class="mobile_copy_text mobile">
+            <p>© Codesdesk Technology Pvt. Ltd. 2022 | All Rights Reserved.</p>
         </div>
     </div>
 </footer>
