--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
     <div class="footer_main_wrap">
         <div class="footer-all-wrapper">
             <div class="footer_newsletter_wrap flex">
@@ -147,4 +147,4 @@
             <p>© Codesdesk Technology Pvt. Ltd. 2022 | All Rights Reserved.</p>
         </div>
     </div>
-</footer>
+</footer> -->
