--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,7 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    font-family: var(--main-heading-font);
 }
 .second-heading {
     font-size: 40px;
@@ -170,6 +171,13 @@ body {
 }
 .mobile {
     display: none;
+}
+.slick-slider .slick-track, .slick-slider .slick-list {
+    border-radius: 10px;
+}
+.slick-slider .slick-track {
+    display: flex;
+    align-items: center;
 }
 
 
